traversal.snake.Snake.scala.error
Compilation error:
Snake:1: error: identifier expected but 'def' found.
override def run(def fonce(){while (!isFacingWall) {forward()}}              
                 ^Snake:3: error: ':' expected but ';' found.
for (i<-1 to 3) {fonce(); left(); forward(); left(); fonce(); right(); forward(); right()}; fonce())                   
                                                                                          ^Snake:3: error: ';' expected but ')' found.
for (i<-1 to 3) {fonce(); left(); forward(); left(); fonce(); right(); forward(); right()}; fonce())                   
                                                                                                   ^